--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,43 @@ body {
 }
 
 .content {
+  min-height: 100vh;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+}
+
+.search-form {
+  min-height: 10vh;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+}
+
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  position: sticky;
+}
+
+.search-button {
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  margin: 4px;
+  cursor: pointer;
+}
+
+.image {
+  width: 250px;
+  height: 250px;
+  border-radius: 20px;
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  text-align: center;
-  max-width: 100vw;
 }
